# simple_net

./: BasicNeuralNet.h  CMakeLists.txt  IdxLoader.h  ImageSampler.h  main.cpp  readme.md  relu.h
include/simple_nnet/: BasicNeuralNet.h  IdxLoader.h  ImageSampler.h  Layer.h  relu.h
src/: BasicNeuralNet.cpp  CMakeLists.txt  IdxLoader.cpp  ImageSampler.cpp  Layer.cpp  main.cpp
test/: CMakeLists.txt  single_layer.cpp  two_layers.cpp
